TUI updated, test fixed